# Latency-Surface-Compiler

./: .gitignore  CMakeLists.txt  README.md
latency_surface_mvp/: .gitignore  CMakeLists.txt  patch_bench.py  repo_overview
latency_surface_mvp/data/runs/: obook_out.csv  parser_base.csv  parser_out.csv  ring_out.csv
latency_surface_mvp/include/: bench.hpp
latency_surface_mvp/kernels/: order_book.hpp  parser_fix.hpp  ring_buffer.hpp
latency_surface_mvp/scripts/: analyze.py  plot_report.py  run_search.py
latency_surface_mvp/src/: bench_main.cpp  bench_main.cpp.bak  bench_main.cpp.pre-QuoteFix.bak  local_stubs.hpp
latency_surface_mvp/transforms/: config.hpp  config.hpp.bak
